// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TrialLicenseBanner should NOT render banner if api call returns NOT TRIAL 1`] = `<div />`;

exports[`TrialLicenseBanner should render banner and provide feedback button if api call returns TRIAL and not expired 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main container standard trialLicenseBanner notExpired StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <h2
        class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-weight-bold"
        level="2"
      />
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-xxxlarge StyledProps--main"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-right-xxxlarge"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-weight-semi-bold"
          style="display: flex; align-items: center;"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-orange500"
            data-icon="info"
          >
            <svg
              height="18"
              viewBox="0 0 12 12"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96l-.836.144zm1.846-7.352v1.03h-1.01v-1.03h1.01z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          common.banners.trial.description
        </p>
      </div>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main contactSales StyledProps--border StyledProps--padding-xsmall Button--with-current-color"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          common.banners.trial.contactSales
        </span>
      </button>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main extendTrial StyledProps--padding-small StyledProps--color StyledProps--color-primary7 Button--with-current-color"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          common.banners.trial.provideFeedback
        </span>
      </button>
    </div>
    <button
      aria-label="close banner"
      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-cross StyledProps--main"
        icon="cross"
      >
        <svg
          data-icon="cross"
          height="18"
          viewBox="0 0 16 16"
          width="18"
        >
          <desc>
            cross
          </desc>
          <path
            d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`TrialLicenseBanner should render expired banner BUT NO extend trial button if it is expired more than 14 days 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main container standard trialLicenseBanner expired StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <h2
        class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-weight-bold"
        level="2"
      />
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-xxxlarge StyledProps--main"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-right-xxxlarge"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-weight-semi-bold"
          style="display: flex; align-items: center;"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-red500"
            data-icon="info"
          >
            <svg
              height="18"
              viewBox="0 0 12 12"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96l-.836.144zm1.846-7.352v1.03h-1.01v-1.03h1.01z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          common.banners.trial.expired.description
        </p>
      </div>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main contactSales StyledProps--border StyledProps--padding-xsmall Button--with-current-color"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          common.banners.trial.contactSales
        </span>
      </button>
    </div>
    <button
      aria-label="close banner"
      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-cross StyledProps--main"
        icon="cross"
      >
        <svg
          data-icon="cross"
          height="18"
          viewBox="0 0 16 16"
          width="18"
        >
          <desc>
            cross
          </desc>
          <path
            d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`TrialLicenseBanner should render expired banner and extend trial button if it is expired less than or equal to 14 days 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main container standard trialLicenseBanner expired StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <h2
        class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-weight-bold"
        level="2"
      />
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-xxxlarge StyledProps--main"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-right-xxxlarge"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-weight-semi-bold"
          style="display: flex; align-items: center;"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-red500"
            data-icon="info"
          >
            <svg
              height="18"
              viewBox="0 0 12 12"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96l-.836.144zm1.846-7.352v1.03h-1.01v-1.03h1.01z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          common.banners.trial.expired.description
        </p>
      </div>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main contactSales StyledProps--border StyledProps--padding-xsmall Button--with-current-color"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          common.banners.trial.contactSales
        </span>
      </button>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main extendTrial StyledProps--padding-small StyledProps--color StyledProps--color-primary7 Button--with-current-color"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          common.banners.trial.expired.extendTrial
        </span>
      </button>
    </div>
    <button
      aria-label="close banner"
      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-cross StyledProps--main"
        icon="cross"
      >
        <svg
          data-icon="cross"
          height="18"
          viewBox="0 0 16 16"
          width="18"
        >
          <desc>
            cross
          </desc>
          <path
            d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;
